# PresentationTool

./: .gitignore  README.md  main.py  pyproject.toml
Apps/Desktop/: main_BE.py  main_FE.py
Apps/Desktop/backend/: notes.md  sql.py
Apps/Desktop/scripts/: webrtc.py
Apps/Phone/: main_FE.py
Apps/Phone/scripts/: webrtc.py
presentation_tool/: main.py
