[project]
name = "presentationtool"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark",email = "mark100smirnow@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flet (>=0.82.2,<0.83.0)",
    "pysqlite3 (>=0.6.0,<0.7.0)",
    "datetime (>=6.0,<7.0)",
    "requests (>=2.33.0,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "websockets (>=16.0,<17.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "aiortc (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
]
